# some-aiohttp-service

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: run.py
src/some_aiohttp_service/: __init__.py  base_service.py  exceptions.py  job.py
tests/: test_service.py  test_stub.py
